5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1764_1576.log
== TEST (2019-05-28 17:19:00) 
-- CODE:
from numpy import *
i=0
e=0
b=0
	var=array(eval(int(input("vetor:"))))
	var1=array(eval(int(input("vetor:"))))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 5
    var=array(eval(int(input())))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:20:38) 
-- CODE:
from numpy import *
i=0
e=0
b=0
	var=array(eval(int(input("vetor:"))))
	var1=array(eval(int(input("vetor:"))))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
			i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 5
    var=array(eval(int(input())))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:20:48) 
-- CODE:
from numpy import *
i=0
e=0
b=0
	var=array(eval(int(input("vetor:"))))
	var1=array(eval(int(input("vetor:"))))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 5
    var=array(eval(int(input())))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:21:41) 
-- CODE:
from numpy import *
i=0
e=0
b=0
	var=array(eval(input("vetor:")))
	var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 5
    var=array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:22:09) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:23:08) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:25:43) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and 
			(var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and 
			(var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:27:45) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1([i])=="11") and (var[i]=="33")) or ((va1r[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:29:22) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11")) or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1([i])=="11") and (var[i]=="33") or (va1r[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:11) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var([i])=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11")) or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1([i])=="11") and (var[i]=="33") or (va1r[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 9
    if(var([i])=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11")) or (var[i]=="33") and (var1[i]=="22"):
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:30:44) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var([i])=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11")) or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1([i])=="11") and (var[i]=="33") or (va1r[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:34) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var([i])=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (va1r[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:33:10) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (va1r[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:33:50) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (var1[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:34:54) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (var1[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:35:09) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (var1[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.352723
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:39:04) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (var1[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:40:43) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if(var[i]=="11") and (var1[i]=="33") or (var[i]=="22") and (var1[i]=="11") or (var[i]=="33") and (var1[i]=="22"):
			e=e+1
	elif(var1[i]=="11") and (var[i]=="33") or (var1[i]=="22") and (var[i]=="11") or (var1[i]=="33") and (var[i]=="22"):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.36405
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:43:33) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:43:48) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):

	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.614448
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:45:38) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:46:14) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:47:52) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)	
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:50:50) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)

print(e+"-"+b)
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:51:18) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
			e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
			b=b+1
	i=i+1
print(i)

print(str(e)+"-"+str(b))
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:52:11) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]=="11") and (var1[i]=="33")) or ((var[i]=="22") and (var1[i]=="11")) or ((var[i]=="33") and (var1[i]=="22")):
		e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
		b=b+1
	i=i+1
print(i)

print(str(e)+"-"+str(b))
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:53:57) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]==11) and (var1[i]==33)) or ((var[i]==22) and (var1[i]==11)) or ((var[i]==33) and (var1[i]==22)):
		e=e+1
	elif((var1[i]=="11") and (var[i]=="33")) or ((var1[i]=="22") and (var[i]=="11")) or ((var1[i]=="33") and (var[i]=="22")):
		b=b+1
	i=i+1
print(i)

print(str(e)+"-"+str(b))
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:54:46) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]==11) and (var1[i]==33)) or ((var[i]==22) and (var1[i]==11)) or ((var[i]==33) and (var1[i]==22)):
		e=e+1
	elif((var1[i]==11) and (var[i]==33)) or ((var1[i]==22) and (var[i]==11)) or ((var1[i]==33) and (var[i]==22)):
		b=b+1
	i=i+1
print(i)

print(str(e)+"-"+str(b))
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:55:03) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]==11) and (var1[i]==33)) or ((var[i]==22) and (var1[i]==11)) or ((var[i]==33) and (var1[i]==22)):
		e=e+1
	elif((var1[i]==11) and (var[i]==33)) or ((var1[i]==22) and (var[i]==11)) or ((var1[i]==33) and (var[i]==22)):
		b=b+1
	i=i+1
print(i)

print(str(e)+"-"+str(b))
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.473149
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
6-3
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
5-5
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
5-7
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:55:15) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]==11) and (var1[i]==33)) or ((var[i]==22) and (var1[i]==11)) or ((var[i]==33) and (var1[i]==22)):
		e=e+1
	elif((var1[i]==11) and (var[i]==33)) or ((var1[i]==22) and (var[i]==11)) or ((var1[i]==33) and (var[i]==22)):
		b=b+1
	i=i+1
print(i)
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:55:28) 
-- CODE:
from numpy import *
i=0
e=0
b=0
var=array(eval(input("vetor:")))
var1=array(eval(input("vetor:")))
while(i<size(var)):
	if((var[i]==11) and (var1[i]==33)) or ((var[i]==22) and (var1[i]==11)) or ((var[i]==33) and (var1[i]==22)):
		e=e+1
	elif((var1[i]==11) and (var[i]==33)) or ((var1[i]==22) and (var[i]==11)) or ((var1[i]==33) and (var[i]==22)):
		b=b+1
	i=i+1
print(i)
if(e>b):
	print("EUSAPIA")
elif(b>e):
	print("BARSANULFO")
else:
	print("EMPATE")
	
-- EXECUTION TIME:
0.327533
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
